--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,5 +22,9 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <context-param>
+  <param-name>BDC_imageStyle</param-name>
+  <param-value>OVERLAP</param-value>
+</context-param>
 
 </web-app>
